--- a/www/index.html
+++ b/www/index.html
@@ -54,6 +54,7 @@
     <div id="button">
         <button id="btnA" class="btn" onclick="register()">Register</button>
         <button id="btnB" class="btn" onclick="fetch()">Fetch</button>
+        <button id="btnB" class="btn" onclick="fetchall()">Fetch ALL</button>
     </div>
     <div id="message">message area</div>
 </body>
