--- a/www/index.html
+++ b/www/index.html
@@ -41,6 +41,20 @@
                 $("#message").html(data + ":" + update);
             })
         }
+
+        function fetchAll() {
+            let TestClass = ncmb.DataStore("FetchTest");
+            TestClass.fetchAll()
+            .then(function(results){
+                var msg = "";
+                for(let i = 0; i < results.length; i++){
+                    let data = results[i].get("text");
+                    let update = results[i].get("updateDate");       
+                    msg += data + ":" + update + "<br>";
+                } 
+                $("#message").html(msg);
+            })
+        }
         
     </script>
 </head>
@@ -54,7 +68,7 @@
     <div id="button">
         <button id="btnA" class="btn" onclick="register()">Register</button>
         <button id="btnB" class="btn" onclick="fetch()">Fetch</button>
-        <button id="btnB" class="btn" onclick="fetchall()">Fetch ALL</button>
+        <button id="btnC" class="btn" onclick="fetchAll()">Fetch ALL</button>
     </div>
     <div id="message">message area</div>
 </body>
