--- a/www/index.html
+++ b/www/index.html
@@ -46,11 +46,11 @@
             let TestClass = ncmb.DataStore("FetchTest");
             TestClass.fetchAll()
             .then(function(results){
-                var msg = "";
+                var msg = "<tr><th>text</th><th>Update Date</th></tr>";
                 for(let i = 0; i < results.length; i++){
                     let data = results[i].get("text");
                     let update = results[i].get("updateDate");       
-                    msg += data + ":" + update + "<br>";
+                    msg += "<tr><td>" + data + "</td><td>" + update + "</td></tr>";
                 } 
                 $("#message").html(msg);
             })
