--- a/www/index.html
+++ b/www/index.html
@@ -46,12 +46,13 @@
             let TestClass = ncmb.DataStore("FetchTest");
             TestClass.fetchAll()
             .then(function(results){
-                var msg = "<tr><th>text</th><th>Update Date</th></tr>";
+                var msg = "<table><tr><th>text</th><th>Update Date</th></tr>";
                 for(let i = 0; i < results.length; i++){
                     let data = results[i].get("text");
                     let update = results[i].get("updateDate");       
                     msg += "<tr><td>" + data + "</td><td>" + update + "</td></tr>";
                 } 
+                msg += "</table>"
                 $("#message").html(msg);
             })
         }
